@@ -16,6 +16,7 @@ dillo-2.2.1 [not released yet]
  - Use the suffix/subdomain field in cookies.txt.
  - Follow most specific matching rule in cookiesrc.
  - Fix segfault with form inputs and repush for stylesheets.
+ - Handle white-space: pre-wrap.
    Patches: corvid
 
 -----------------------------------------------------------------------------
